Updating Spring Boot to 2.3.4.RELEASE

--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,12 @@
 plugins {
-  id 'org.springframework.boot' version '2.1.8.RELEASE'
-  id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+  id 'org.springframework.boot' version '2.3.4.RELEASE'
+  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
   id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
 group = 'com.jos.dem.springboot.hazelcast'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+version = '1.0.0-SNAPSHOT'
+sourceCompatibility = '13'
 
 repositories {
   mavenCentral()
@@ -19,6 +15,12 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'com.hazelcast:hazelcast-spring'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation('org.springframework.boot:spring-boot-starter-test') {
+    exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+  }
   testImplementation 'io.projectreactor:reactor-test'
+}
+
+test {
+  useJUnitPlatform()
 }
