--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,12 @@ group = 'com.jos.dem.springboot.hazelcast'
 version = '1.0.0-SNAPSHOT'
 sourceCompatibility = '13'
 
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
+}
+
 repositories {
   mavenCentral()
 }
@@ -15,6 +21,8 @@ repositories {
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   implementation 'com.hazelcast:hazelcast-spring'
+  compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
